# PAV-P2

./: .gitignore  README.md  meson.build  pav_4385.vad
python/: plotpower.py  plotzcr.py  res.txt
scripts/: run_vad.sh
src/: main_vad.c  pav_analysis.c  pav_analysis.h  vad.c  vad.docopt  vad.h  vad_docopt.h
